fix broken spacing for sharing privacy toggle

--- a/resources/assets/css/components/menu.less
+++ b/resources/assets/css/components/menu.less
@@ -156,7 +156,7 @@
       }
     }
   }
-  > i {
+  i {
     padding: @menu_padding;
   }
   .peak {
